# AIAgent

./: .dockerignore  .env  DETAILED_DESIGN.md  Dockerfile  Docker基础设施作用与数据流说明.md  LangChain在当前项目中的使用情况与实际流程说明.md  OPERATION_MANUAL.md  PROJECT_ARCHITECTURE.md  README.md  crm_database.db  def.cpp  docker-compose.yml  environment.yml  main.py  requirements.txt  test.txt  test_env.py  web_ui.html  上下文扩容.md  中间表示.md  任务路由.md  开放域升级实施路线图.md  开放域建模系统最小可行改造清单.md  开放域建模系统路线图.md  开放模型中间表示草案.md  引入LangGraph的必要性评估与改造方案.md  强半开放域.md  强半开放域验收清单_当前差距_最短改造路径.md  当前系统LangGraph接入评估与实施方案.md  当前项目RAG调用链时序图.md  当前项目与主流智能体架构对照及下一阶段改造清单.md  提示词优化清单与多模型拆分改造方案.md  操作手册.md  改造.md  本地工具链MCP动态库构建落地方案.md  架构演进方向.md  汇报PPT提纲.md  直出C_Cpp_DLL最小改造方案.md  知识库.md  结构化澄清与槽位收集.md  (+5 more)
agents/: crm_agent.py  dll_build_support.py  matlab_codegen.py  model_planner.py  model_spec_builder.py  model_spec_schema.py  model_spec_validator.py  open_model_ir.py  open_model_ir_builder.py  open_model_ir_compat.py  open_model_ir_schema.py  open_model_ir_validator.py  session_store.py  structured_generation_ir.py  task_planner.py  tools.py
agents/structured_generation/: __init__.py  clarify_policy.py  schema_registry.py  slot_extractor.py
api/: server.py
api/query/: routes.py
config/: settings.py
database/: __init__.py  crm_db.py  models.py  schema.sql  seed_data.py
exampleMFile/: rocketModel.m
generated_builds/20260318_093631_smoke_job_c26a722f/: manifest.json  result.json
generated_builds/20260318_093904_materialize_smoke_ddabfe52/: manifest.json  result.json
generated_builds/20260318_103054_underwater_launch_20260313_122327_4ff26361/: manifest.json  result.json
generated_builds/20260318_103208_underwater_launch_20260313_122327_7ccdd9ab/: manifest.json  result.json
generated_builds/20260318_103208_underwater_launch_20260313_122327_7ccdd9ab/src/: CMakeLists.txt  wrapper.cpp
generated_builds/20260318_143338_dll_smoke_19518f37/: manifest.json  result.json
generated_builds/20260318_143338_dll_smoke_19518f37/src/: CMakeLists.txt  wrapper.cpp
generated_builds/20260319_012529_dll_smoke_test_86593fba/: manifest.json  result.json
generated_builds/20260319_023003_dll_smoke_prefdir_workaround_40f6bf59/: manifest.json  result.json
generated_builds/20260319_023003_dll_smoke_prefdir_workaround_40f6bf59/src/: CMakeLists.txt  wrapper.cpp
generated_builds/20260319_024455_dll_smoke_pref_reset_bb168640/: manifest.json  result.json
generated_builds/20260319_024455_dll_smoke_pref_reset_bb168640/src/: CMakeLists.txt  wrapper.cpp
generated_builds/20260319_025710_dll_smoke_post_fix_6015ce6c/: manifest.json  result.json
generated_builds/20260319_025710_dll_smoke_post_fix_6015ce6c/src/: CMakeLists.txt  wrapper.cpp
generated_builds/20260319_031107_dll_smoke_regression_0fb87900/: manifest.json  result.json
generated_builds/20260320_030823_frontend_default_env_probe_cadb62bc/: manifest.json  result.json
generated_builds/20260320_030823_frontend_default_env_probe_cadb62bc/src/: CMakeLists.txt  wrapper.cpp
generated_builds/20260320_032608_frontend_default_runtime_probe_95ef68db/: manifest.json  result.json
generated_builds/20260320_042407_rocket_launch_1d_aa7a8d81/: manifest.json  result.json
generated_builds/20260320_042407_rocket_launch_1d_aa7a8d81/src/: CMakeLists.txt  wrapper.cpp
generated_builds/generated_model_dll_test_c46f76e2/20260319_073444_generated_model_dll_test_4237ebd6/src/: CMakeLists.txt  wrapper.h
generated_models/: kalman_tracking_20260304_150857.m  lanchester_battle_attrition_20260313_105206.m  mass_spring_damper_ode_20260303_102117.m  missile_flight_2d_20260317_170015.m  missile_flight_2d_20260318_124713.m  mpc_control_20260304_133003.m  pid_simulink_loop_20260303_102117.m  pid_simulink_loop_20260304_095619.m  pid_simulink_loop_20260304_110008.m  pid_simulink_loop_20260304_150527.m  pid_simulink_loop_20260304_150940.m  pid_simulink_loop_20260304_151049.m  rocketModel.m  rocket_launch_1d.m  rocket_launch_1d_20260304_153933.m  rocket_launch_1d_20260304_154309.m  rocket_launch_1d_20260304_155612.m  rocket_launch_1d_20260304_155843.m  rocket_launch_1d_20260304_160940.m  rocket_launch_1d_20260304_170622.m  rocket_launch_1d_20260310_140836.m  rocket_launch_1d_20260312_134950.m  rocket_launch_1d_20260312_135741.m  rocket_launch_1d_20260312_160123.m  rocket_launch_1d_20260313_135251.m  rocket_launch_1d_20260318_114730.m  satellite_orbit_2body.m  satellite_orbit_2body_20260313_105142.m  satellite_orbit_2body_20260318_121659.m  satellite_orbit_2body_20260318_131624.m  state_space_response_20260304_131422.m  state_space_response_20260304_150633.m  state_space_response_20260304_150745.m  state_space_response_20260304_151135.m  state_space_response_20260304_151414.m  torpedo_underwater_launch_1d_20260313_102315.m  torpedo_underwater_launch_1d_20260313_105016.m  torpedo_underwater_launch_1d_20260313_122508.m  torpedo_underwater_launch_1d_20260313_135423.m  transfer_function_step_20260304_095515.m  (+6 more)
generated_models/_template_validation/: arx_identification.m  battery_rc_model.m  fft_lowpass_filter.m  kalman_tracking.m  lanchester_battle_attrition.m  mass_spring_damper_ode.m  missile_flight_2d.m  mpc_control.m  pid_simulink_loop.m  pv_iv_curve.m  radar_target_tracking_2d.m  robot_2dof_kinematics.m  (+5 more)
knowledge_base/: assembly_plan.py  builder.py  conditions_data.py  document_loader.py  matlab_generator.py  matlab_knowledge_index.json  matlab_model_data.py  matlab_smoke_tester.py  matlab_static_validator.py  model_family_codegen.py  model_planner.py  query_parser.py  rag_retriever.py  web_evidence_retriever.py
tests/: test_builtin_enum_codegen.py  test_chat_api_e2e.py  test_crm_agent_chat_web_research.py  test_crm_agent_pending_generation_ir.py  test_dll_build_support.py  test_generated_model_dll_build.py  test_runtime_build_env.py  test_task_planner_web_research.py  test_web_evidence_retriever.py  test_web_research_mcp.py  test_web_research_qdrant_indexer.py
tools/: count_loc.py  golden_match_regression.py  mcp_dll_smoke_regression.py  run_in_rag_crm.ps1  verify_golden.ps1  verify_mcp_dll_smoke.ps1
(+321 files in other folders)
